# wbcrypto-mode

./: .gitignore  CMakeLists.txt  README.CN.md  README.md  call-fpe-app.md  call-fpe.md  call-sm3.md  call-sm4.md  call-wbsm4.md
WBMatrix/include/WBMatrix/: WBMatrix.h  random.h  structure.h
WBMatrix/src/: WBMatrix.c  random.c
docs/: call-fpe-app.md
include/wbcrypto/: aes.h  conf.h  error.h  fpe.h  fpe_app.h  modes.h  se_wbsm4.h  sm3.h  sm4.h  utils.h  wbaes.h  wbaes_wbgcm_ee.h  wbaes_wbgcm_mask.h  wbsm4.h
py/: README.md  create_student.sql  insert_mysql.py  requirments_insert.txt  trans_proxy.py  udf透明代理使用文档.md
src/aes/: aes.c  aes_fpe.c  aes_modes.c
src/fpe/: aux_cbc.c  aux_cbc.h  bn.c  bn.h  ff1.c  ff1_cmac.c  ff3.c  ff3_gmac.c  ffx.c  ffx.h  fpe.c  fpe_locl.c  fpe_locl.h  init.c
src/fpe_app/: address.c  cn_char.c  cn_char.h  cn_utf8.c  idcard.c  init.c  phone.c  utf8_util.c  utf8_util.h
src/modes/: cbc128.c  gcm128.c  gcm_parallel.c  gcmfile.c
src/se_wbsm4/: se_wbsm4.c  se_wbsm4_local.c  se_wbsm4_local.h
src/sm3/: md32_common.h  sm3.c  sm3_local.h
src/sm4/: sm4.c  sm4_fpe.c  sm4_modes.c
src/utils/: keystore.c  padding.c  wrandom.c
src/wbaes/: wbaes.c  wbaes_local.c  wbaes_local.h  wbaes_modes.c  wbaes_wbgcm_ee_file.c  wbaes_wbgcm_ee_init.c  wbaes_wbgcm_ee_mode.c  wbaes_wbgcm_mask_file.c  wbaes_wbgcm_mask_init.c  wbaes_wbgcm_mask_mode.c
src/wbsm4/: wbsm4.c  wbsm4_exkey.c  wbsm4_fpe.c  wbsm4_gen.c  wbsm4_local.h  wbsm4_modes.c
test/: CMakeLists.txt  aes_test.c  ecb_perform.c  file_encrypt_test.c  fpe_app_test.c  fpe_mac_perform.c  fpe_mac_test.c  fpe_peform.c  fpe_test.c  main.c  perform_enc_standard.c  perform_file_enc_test.c  perform_fpe_app.c  perform_wbaes_test.c  se_wbsm4_test.c  sm3_test.c  sm4_test.c  test_local.h  test_utils.c  wbaes_perform.c  wbaes_test.c  wbaes_wbgcm_ee_test.c  wbaes_wbgcm_mask_test.c  wbsm4_perform.c  wbsm4_test.c
testData/: genFile.bat  genFile.sh
udf/: CMakeLists.txt  README.md  mysql-udf.md  mysql.cpp  mysql5.cpp  mysql8.cpp
